optimize(api): optimize api version